test/echo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    k8s-app: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: echo
  template:
    metadata:
      labels:
        k8s-app: echo
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: echo-service
          image: quay.io/bugfest/echoserver:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
        - name: tcp-echo-service
          image: venilnoronha/tcp-echo-server:latest
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    k8s-app: echo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: tcp
      port: 9000
      targetPort: 9000
  selector:
    k8s-app: echo
