test/istioctl-heimdall-values.yaml
image:
  repository: heimdall
  pullPolicy: Never
  tag: test

istio:
  version: "1.15.6"
  revision: cp-v115x
  clusterId: nasp-test-cluster
  meshGateway:
    enabled: true
    withIstioOperator: false
    nodePort: "16443"
